refs #3691 - no focus visible on slider - almost fixes completely, lacks a11y high-contrast requirements in ie6/7 focus is now visible via darker border, handle and progress background image.  outline for a11y in ff/safari but not working in ie.
git-svn-id: http://svn.dojotoolkit.org/src/dijit/trunk@10869 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/themes/tundra/tundra.css
+++ b/themes/tundra/tundra.css
@@ -1200,6 +1200,16 @@
 	background: #c0c2c5 url("images/sliderFullVertical.png") repeat-y bottom left;
 }
 
+.tundra .dijitSliderFocused .dijitHorizontalSliderProgressBar,
+.tundra .dijitSliderFocused .dijitHorizontalSliderLeftBumper {
+	background-image:url("images/sliderFullFocus.png");
+}
+
+.tundra .dijitSliderFocused .dijitVerticalSliderProgressBar,
+.tundra .dijitSliderFocused .dijitVerticalSliderBottomBumper {
+	background-image:url("images/sliderFullVerticalFocus.png");
+}
+
 .tundra .dijitVerticalSliderRemainingBar {
 	border-color: #b4b4b4;
 	background: #dcdcdc url("images/sliderEmptyVertical.png") repeat-y bottom left;
@@ -1215,6 +1225,15 @@
 	outline:1px; 
 	/* border-color: #b4b4b4; */
 }
+.tundra .dijitSliderFocused .dijitSliderBar {
+	border-color:#333;	
+}
+.dijit_a11y .dijitSliderFocused .dijitSliderBar {
+	outline:1px dotted #666; 
+}
+.dijit_a11y .dijitSliderProgressBar { 
+	background-color:#333; 
+}
 
 .tundra .dijitHorizontalSliderImageHandle {
 	border:0px;
@@ -1223,6 +1242,11 @@
 	background:url("images/preciseSliderThumb.png") no-repeat center center; 
 	cursor:pointer; 
 }
+.tundra .dijitSliderFocused .dijitHorizontalSliderImageHandle {
+	background-image:url("images/preciseSliderThumbFocus.png");
+	#background-image:url("images/preciseSliderThumbFocus.gif");
+}
+
 .dj_ie6 .dijitHorizontalSliderImageHandle {
 	background-image:url("images/preciseSliderThumb.gif"); 
 }
@@ -1245,6 +1269,11 @@
 	height:16px;
 	background:url("images/sliderThumb.png") no-repeat center center; 
 	cursor:pointer;
+}
+.tundra .dijitSliderFocused .dijitVerticalSliderImageHandle {
+	background-image:url("images/sliderThumbFocus.png");
+	#background-image:url("images/sliderThumbFocus.gif");
+	
 }
 
 .tundra .dijitVerticalSliderBottomBumper {
